--- a/exercices/module1/1.3/index.html
+++ b/exercices/module1/1.3/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>0</p>
+    <button></button>
     <script src="./index.js"></script>
 </body>
 </html>
