--- a/exercices/module2/2.1/src/index.html
+++ b/exercices/module2/2.1/src/index.html
@@ -9,12 +9,12 @@
 
   <body>
     <header>
-      <nav>
-        <img src="./img/logo-MyMovies1.png" height="50px" alt="Logo MyMovies">
-      </nav>
     </header>
     <main>
-      <h1>Voici mon site MyMovies</h1>
+      <h1>
+        <img src="./img/logo-MyMovies1.png" height="50px" alt="Logo MyMovies">
+        Voici mon site MyMovies
+      </h1>
     </main>
     <footer>
       <p>
